--- a/.env
+++ b/.env
@@ -1,28 +1,16 @@
-# Must:
-NEXT_PUBLIC_DEPLOYMENT_URL=https://api.convex.giltine.com
-CONVEX_CLOUD_ORIGIN=https://api.convex.giltine.com
-CONVEX_SITE_ORIGIN=https://actions.convex.giltine.com
 
 # if DB:
 #POSTGRES_URL=postgresql://postgres:omedimqs8ifs1nka@convex-db-9aheye:5432
 
 # if S3
-S3_ENDPOINT_URL="http://minio:9000"
-#S3_ENDPOINT_URL="https://s3.giltine.com"
-#S3_ENDPOINT_URL="http://88.119.165.37:9000"
-AWS_SECRET_ACCESS_KEY=
-AWS_ACCESS_KEY_ID=
+# S3_ENDPOINT_URL="http://minio:9000"
+# AWS_SECRET_ACCESS_KEY=
+# AWS_ACCESS_KEY_ID=
 # Conf for minio:
-AWS_S3_FORCE_PATH_STYLE=true
+# AWS_S3_FORCE_PATH_STYLE=true
 # AWS_S3_DISABLE_SSE=true
 # Same as on s3 storage:
-AWS_REGION="giltine"
-
-#S3_STORAGE_EXPORTS_BUCKET="convex-snapshot-exports"
-#S3_STORAGE_SNAPSHOT_IMPORTS_BUCKET="convex-snapshot-imports"
-#S3_STORAGE_MODULES_BUCKET="convex-modules"
-#S3_STORAGE_FILES_BUCKET="convex-user-files"
-#S3_STORAGE_SEARCH_BUCKET="convex-search-indexes"
+#AWS_REGION="giltine"
 
 #RUST_LOG=info,common::errors=debug,aws_config=trace,aws_smithy_runtime=trace,hyper=trace,reqwest=trace
 #LOG_SENSITIVE_BODIES=true
