port and dash fixes

--- a/.env
+++ b/.env
@@ -2,16 +2,18 @@
 # if DB:
 #POSTGRES_URL=postgresql://postgres:omedimqs8ifs1nka@convex-db-9aheye:5432
 
-# if S3
+# - if using S3 -
 # S3_ENDPOINT_URL="http://minio:9000"
 # AWS_SECRET_ACCESS_KEY=
 # AWS_ACCESS_KEY_ID=
-# Conf for minio:
+# - Conf for minio: -
 # AWS_S3_FORCE_PATH_STYLE=true
 # AWS_S3_DISABLE_SSE=true
-# Same as on s3 storage:
-#AWS_REGION="giltine"
+# - Same as on s3 storage: -
+# AWS_REGION="giltine"
 
 #RUST_LOG=info,common::errors=debug,aws_config=trace,aws_smithy_runtime=trace,hyper=trace,reqwest=trace
 #LOG_SENSITIVE_BODIES=true
 #RUST_BACKTRACE=1
+
+DISABLE_BEACON=1
